@@ -1,30 +1,26 @@
 package bll;
 
-import at.favre.lib.crypto.bcrypt.BCrypt;
 import dal.UserRepository;
 import model.User;
+import org.mindrot.jbcrypt.BCrypt;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AuthService {
 
-    private final UserRepository userRepository;
+    private final UserRepository userRepository = new UserRepository();
 
-    public AuthService() {
-        this.userRepository = new UserRepository();
-    }
-
-    public String login(String username, String password) {
+    public boolean authenticate(String username, String password) {
         User user = userRepository.findByUsername(username);
-        if (user == null) return null;
-
-        BCrypt.Result result = BCrypt.verifyer().verify(password.toCharArray(), user.getPassword());
-        return result.verified ? user.getRole() : null;
+        if (user != null) {
+            return BCrypt.checkpw(password, user.getPassword());
+        }
+        return false;
     }
 
     public void addUser(String username, String password, String role) {
-        String hash = BCrypt.withDefaults().hashToString(12, password.toCharArray());
-        User user = new User(username, hash, role);
+        String hashedPassword = BCrypt.hashpw(password, BCrypt.gensalt());
+        User user = new User(0, username, hashedPassword, role);
         userRepository.save(user);
     }
 
@@ -35,19 +31,19 @@ public class AuthService {
     public List<String> getAllUsernames() {
         return userRepository.findAll().stream()
                 .map(User::getUsername)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteUser(String username) {
         userRepository.deleteByUsername(username);
     }
 
-    public boolean verifyPassword(String password, String hashed) {
-        return BCrypt.verifyer().verify(password.toCharArray(), hashed).verified;
-    }
-
-    public String hashPassword(String password) {
-        return BCrypt.withDefaults().hashToString(12, password.toCharArray());
+    public void assignRoleToUser(String username, String newRole) {
+        User user = userRepository.findByUsername(username);
+        if (user != null) {
+            user.setRole(newRole);
+            userRepository.updateUser(user);
+        }
     }
 }
 
